--- a/DKRUpdater.Feeds/packages.config
+++ b/DKRUpdater.Feeds/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="MoreLinq.Portable" version="1.4.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
 </packages>
