--- a/DKRUpdater.Feeds/DKRUpdater.Feeds.csproj
+++ b/DKRUpdater.Feeds/DKRUpdater.Feeds.csproj
@@ -63,11 +63,9 @@
     <Compile Include="Podcasts\BaseRss\Channel.cs" />
     <Compile Include="Interfaces\IRss.cs" />
     <Compile Include="Podcasts\BaseRss\RssRootBase.cs" />
-    <Compile Include="Services\CyberageRadioService.cs" />
+    <Compile Include="Services\FeedReaderService.cs" />
     <Compile Include="Services\FeedRetrievalService.cs" />
     <Compile Include="Interfaces\IFeedRetrievalService.cs" />
-    <Compile Include="Services\RadioBlastFurnanceService.cs" />
-    <Compile Include="Services\DanceMachine5000Service.cs" />
     <Compile Include="Podcasts\BaseRss\Enclosure.cs" />
     <Compile Include="Podcasts\BaseRss\Guid.cs" />
     <Compile Include="Podcasts\BaseRss\Image.cs" />
@@ -76,15 +74,14 @@
     <Compile Include="Podcasts\BaseRss\Link.cs" />
     <Compile Include="Podcasts\BaseRss\Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\DarkHorizonsService.cs" />
-    <Compile Include="Services\OontzCastService.cs" />
-    <Compile Include="Services\DjRazorGrrlService.cs" />
-    <Compile Include="Services\TheRequiemService.cs" />
+    <Compile Include="Services\FeedValidationService.cs" />
     <Compile Include="Utilities\PathHelper.cs" />
     <Compile Include="Utilities\PodcastFileProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="feeds.json" />
+    <Content Include="feeds.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
