load playlist configs for total amount of new podcasts in new playlist

--- a/DKRUpdater.Playlists/DKRUpdater.Playlists.csproj
+++ b/DKRUpdater.Playlists/DKRUpdater.Playlists.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\MoreLinq.Portable.1.4.0\lib\portable-net4+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\MoreLinq.Portable.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="policy.2.0.taglib-sharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
       <HintPath>..\packages\taglib.2.1.0.0\lib\policy.2.0.taglib-sharp.dll</HintPath>
       <Private>True</Private>
@@ -57,12 +61,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\DatedPlaylistFile.cs" />
+    <Compile Include="Models\PlaylistConfigs.cs" />
     <Compile Include="Models\PlaylistFile.cs" />
     <Compile Include="Utilities\PlaylistHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="playlist.pls" />
+    <None Include="playlist_configs.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
