--- a/DKRUpdater.Core/packages.config
+++ b/DKRUpdater.Core/packages.config
@@ -3,4 +3,5 @@
   <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="MoreLinq.Portable" version="1.4.0" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="taglib" version="2.1.0.0" targetFramework="net452" />
 </packages>
