--- a/DKRUpdater.Main/DKRUpdater.Main.csproj
+++ b/DKRUpdater.Main/DKRUpdater.Main.csproj
@@ -55,10 +55,16 @@
     <ManifestKeyFile>DKRUpdater.Main_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
@@ -82,6 +88,7 @@
     <None Include="App.config" />
     <None Include="DKRUpdater.Main_TemporaryKey.pfx" />
     <None Include="packages.config" />
+    <None Include="Properties\app.manifest" />
     <None Include="readme.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
